<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main_signup">Kritu</string>
    <string name="title_activity_main_login">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- <string name="app_name">NavigationDrawerLegacy</string> -->
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello</string>

    <dimen name="count">10dp</dimen>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_logged_in__fragment">LoggedIn_Fragment</string>
    <string name="title_activity_fragment_activity__signed_in">FragmentActivity_SignedIn</string>
    <string name="app_name">TaxiOnCall</string>
    <string name="PUL">PICKUP LOCATION</string>
    <string name="SA">SELECT AIRPORT</string>
    <string name="SAT1">GOING TO AIRPORT</string>
    <string name="SAT2">COMING FROM AIRPORT</string>
    <string name="DL">DROP LOCATION</string>
    <string name="EPL">Enter Pick Location</string>
    <string name="EDL">Enter Drop Location</string>
    <string name="DATE">Pick-Up Date</string>
    <string name="TIME">Pick-Up Time</string>
    <string name="Button">Book Cab</string>
    <string name="join">Join US</string>
    <string name="write">Write Some Thing</string>
    <string name="Static">Static Content</string>
    <string name="DateButton">Select Button</string>
    <string name="DateText">Current Date (MM-DD-YYYY): </string>
    <string name="title_activity_other_option">OtherOption</string>
    <string name="title_activity_booking_history">BookingHistory</string>

</resources>
